--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- animaciones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <!-- Nuestro css -->
+    <link rel="stylesheet" href="/asset/css/styles.css">
     <title>Juego de Cartas</title>
 </head>
 
 <body>
+    <header class="title">
+        <h1>BLACKJACK</h1>
+    </header>
+
+    <div class="score text-center mt-4">
+        <span>Jugador Score: <small>0</small></span>
+    </div>
+
     <!-- underscore -->
     <script src="/asset/js/underscore-umd-min.js"></script>
 
