--- a/index.html
+++ b/index.html
@@ -27,6 +27,34 @@
         <span>Jugador Score: <small>0</small></span>
     </div>
 
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <div class="divCards">
+                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="score text-center mt-4">
+        <span>Computador Score: <small>0</small></span>
+    </div>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <div class="divCards">
+                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- underscore -->
     <script src="/asset/js/underscore-umd-min.js"></script>
 
