--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col">
                 <div class="divCards">
-                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+                    <!-- <img class="img-card" src="/asset/img/10C.png" alt="card"> -->
                 </div>
             </div>
         </div>
@@ -45,12 +45,22 @@
         <div class="row">
             <div class="col">
                 <div class="divCards">
-                    <img class="img-card" src="/asset/img/10C.png" alt="card">
+
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- BOTONES -->
+    <div class="container">
+        <div class="row">
+            <div id="divButtons" class="col text-center">
+                <button id="btnNewGame" class="btn btn-primary btn-lg">New Game</button>
+                <button id="btnGetCard" class="btn btn-warning btn-lg">Get Card</button>
+                <button id="btnStopGame" class="btn btn-danger btn-lg">Stop</button>
+            </div>
+        </div>
+    </div>
     <!-- underscore -->
     <script src="/asset/js/underscore-umd-min.js"></script>
 
