archivo js game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="score text-center mt-4">
-        <span>Jugador Score: <small>0</small></span>
+        <span>Player Score: <small>0</small></span>
     </div>
 
     <div class="container mt-5">
@@ -61,11 +61,14 @@
             </div>
         </div>
     </div>
+
+
     <!-- underscore -->
     <script src="/asset/js/underscore-umd-min.js"></script>
 
     <!-- sweet alert 2 -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="asset/js/game.js"></script>
 </body>
 
 </html>
