funciones start game y create deck

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="divButtons" class="col text-center">
                 <button id="btnNewGame" class="btn btn-primary btn-lg">New Game</button>
                 <button id="btnGetCard" class="btn btn-warning btn-lg">Get Card</button>
-                <button id="btnStopGame" class="btn btn-danger btn-lg">Stop</button>
+                <button id="btnStopTurn" class="btn btn-danger btn-lg">Stop</button>
             </div>
         </div>
     </div>
